online-shop-microservices-deployment-main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: microservice-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-app.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend 
            port: 
              number: 80
